hphp/hack/test/typecheck/reactive/test_rx_enabled6.php.exp
File "test_rx_enabled6.php", line 4, characters 7-19:
`\HH\Rx\IS_ENABLED` can only be used in reactive functions. (Typing[4220])
File "test_rx_enabled6.php", line 13, characters 7-19:
`\HH\Rx\IS_ENABLED` can only be used in reactive functions. (Typing[4220])
File "test_rx_enabled6.php", line 24, characters 9-21:
`\HH\Rx\IS_ENABLED` can only be used in reactive functions. (Typing[4220])
File "test_rx_enabled6.php", line 31, characters 9-21:
`\HH\Rx\IS_ENABLED` can only be used in reactive functions. (Typing[4220])
